--- a/cli/package.json
+++ b/cli/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "命令行工具",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall":"coffee ./postinstall.coffee"
   },
   "author": "",
   "license": "ISC",
