--- a/13.cli_tool/cakejs-generator/package.json
+++ b/13.cli_tool/cakejs-generator/package.json
@@ -13,10 +13,11 @@
     "cakejs": "./bin/cakejs"
   },
   "dependencies": {
+    "q": "~1.0.0",
     "chalk": "~0.4.0",
     "commander": "^2.2.0",
-    "q": "~1.0.1",
-    "request": "~2.36.0"
+    "request": "~2.36.0",
+    "fs-extra": "^0.12.0"
   },
   "keywords": [
     "cakejs"
