--- a/controlflow/async/package.json
+++ b/controlflow/async/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "bluebird": "^2.7.1"
   }
 }
