--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,20 @@
 {
 	"version": "0.1.0",
-	// List of configurations. Add new configurations or edit existing ones.  
+	// List of configurations. Add new configurations or edit existing ones.
 	// ONLY "node" and "mono" are supported, change "type" to switch.
 	"configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Proxy",
+      "program": "${workspaceFolder}/04.www/http/proxy/http-proxy-middleware.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Program",
+      "program": "${workspaceFolder}/04.www/http/proxy/proxy-http.client.js"
+    },
 		{
 			// Name of configuration; appears in the launch configuration drop down menu.
 			"name": "Launch app.js",
@@ -20,7 +32,7 @@
 			"runtimeExecutable": null,
 			// Environment variables passed to the program.
 			"env": { }
-		}, 
+		},
 		{
 			"name": "Attach",
 			"type": "node",
