--- a/22.server/02.express/demo-project/package.json
+++ b/22.server/02.express/demo-project/package.json
@@ -6,14 +6,19 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "express": "~4.0.0",
-        "static-favicon": "~1.0.0",
-        "morgan": "~1.0.0",
-        "cookie-parser": "~1.0.1",
         "body-parser": "~1.0.0",
+        "cookie-parser": "~1.0.1",
         "debug": "~0.7.4",
+        "express": "~4.0.0",
+        "express-session": "^1.17.0",
         "jade": "~1.3.0",
+        "lodash": "^4.17.15",
+        "method-override": "^3.0.0",
         "mongodb": "*",
-        "monk": "*"
+        "mongoose": "^5.7.5",
+        "monk": "*",
+        "morgan": "~1.0.0",
+        "serve-favicon": "^2.5.0",
+        "static-favicon": "~1.0.0"
     }
 }
